# JWCCommandSpawn

./: .gitignore  CMakeLists.txt  CommandSpawn_all.sh  LICENSE  README.md  Reference.md  configure.sh
Dev/: CommandSpawn_all.sh  NewAgeDeps.lst  build_managed.sh  build_native.sh
Project/JWCCommandSpawn.net/: JWCCommandSpawn.net.sln
Project/JWCCommandSpawn.net/CommandSpawnAnsiSnifferDemo/: CommandSpawnAnsiSnifferDemo.csproj  Program.cs  ansi_interactive_demo.sh
Project/JWCCommandSpawn.net/JWCCommandSpawn.net/: CommandSpawn.cs  JWCCommandSpawn.net.csproj
Project/JWCCommandSpawn.net/TestCommandSpawn/: Program.cs  TestCommandSpawn.csproj
Project/JWCCommandSpawn.net/TestNested_feffect/: Program.cs  TestNested_feffect.csproj
docs/: CommandSpawn_all.sh.md  NewAgeEnvironment.md
docs/Dev/: JWCCommandSpawn.Reference prompt.params.md
include/JWCCommandSpawn/: CommandSpawn.h
src/: CommandSpawn.cpp  test.cpp  test_bash_invoke.cpp  test_escapement.cpp
src/Platform_Linux/: CommandSpawn_Linux.cpp
src/Platform_Windows/: CommandSpawn_Windows.cpp
